# gpurun-numa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: PUBLISHING.md  todos.md
src/gpurun/: __init__.py  cli.py  launcher.py  topology.py
tests/: test_cli.py  test_topology.py
