[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gpurun-numa"
dynamic = ["version"]
description = "Run commands with GPU-local CPU/NUMA affinity from nvidia-smi topology"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jacob Morton" }]
keywords = ["gpu", "numa", "nvidia", "cuda", "affinity", "numactl", "taskset"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/spacejake/gpurun-numa"
Repository = "https://github.com/spacejake/gpurun-numa"
Documentation = "https://github.com/spacejake/gpurun-numa#readme"
Issues = "https://github.com/spacejake/gpurun-numa/issues"
Changelog = "https://github.com/spacejake/gpurun-numa/blob/main/CHANGELOG.md"

# PyPI distribution is ``gpurun-numa`` (``gpurun`` is taken on PyPI by another project).
# The installed console command remains ``gpurun``.
[project.scripts]
gpurun = "gpurun.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "gpurun.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
